# forex_notify

./: Cargo.toml  README  README.md
src/: main.rs
