[package]
name = "forex_notify"
version = "0.1.0"
authors = ["daviddexter"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0"
serde = { version = ">=1.0.117", features = ["derive"] }
toml = ">=0.5.7"
openssl = "0.10.30"
job_scheduler = ">=1.2.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
hyper = "0.13.9"
url = "2.2.0"
serde_json = "1.0"