[package]
name = "forex_notify"
version = "0.1.0"
authors = ["daviddexter"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0"
serde = { version = ">=1.0.117", features = ["derive"] }
serde_json = "1.0"
toml = ">=0.5.7"
job_scheduler = ">=1.2.1"
reqwest = { version = "0.10.9", features = ["blocking", "json"] }
url = "2.2.0"
notify-rust = "4"